style: fix z-index for page components

--- a/packages/core/css/_aside.css
+++ b/packages/core/css/_aside.css
@@ -8,7 +8,7 @@
 
 @layer components {
   .ax-side {
-    @apply grid overflow-hidden relative z-10;
+    @apply grid overflow-hidden relative z-[1];
     grid-template-rows: auto 1fr;
 
     & .ax-side__header {
